clean up MCTS package: fix typo and simplify stream collection
- Fix typo in DeterminizerTest method name (ComeFfrom → ComeFrom)
- Replace Collectors.toList() with .toList() in TrickEvaluator

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>